--- a/src/Components/Todo.css
+++ b/src/Components/Todo.css
@@ -51,7 +51,7 @@
   cursor: pointer;
 }
 
-.btn {
+button {
   border: none;
   outline: none;
   background: #007bff;
@@ -59,42 +59,9 @@
   padding: 10px 20px;
   border-radius: 5px;
   cursor: pointer;
-  transition: background 0.3s;
+  transition: padding 0.3s;
 }
 
-.btn:hover {
-  background: #0056b3;
+button:hover {
+padding: 15px 25px; 
 }
-
-.effect04 {
-  position: relative;
-  overflow: hidden;
-}
-
-.effect04 span {
-  position: relative;
-  transition: 0.3s;
-}
-
-.effect04::before {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #fff;
-  border-radius: 50%;
-  transform: translateY(100%);
-  z-index: 1;
-}
-
-.effect04:hover::before {
-  transform: translateY(0);
-}
-
-.effect04:hover span {
-  color: #007bff;
-  transition: 0.3s;
-}
-
